<resources>
    <string name="app_name">ProxiPal</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">LOGIN</string>
    <string name="already_have_account">Already have an account? Log in</string>
    <string name="does_not_have_account">No account yet?</string>
    <string name="login_subheading">Login to access your bookmarks and personal preferences.</string>
    <string name="prompt_email_reset_password">Enter email to</string>
    <string name="reset_password">reset password</string>
    <string name="password_reset_email">Email sent</string>
    <string name="register_here">Register here.</string>
    <string name="prompt_password_comfirm">Confirm password</string>
    <string name="email_confirmation">An email has been sent for account confirmation. Click the link finish account creation.</string>
    <string name="matching_password">Password does not match</string>
    <string name="log_out">Log Out</string>
    <string name="airplane_mode">Airplane Mode</string>
    <string name="show_completed_tasks_only">Show completed tasks only</string>
    <string name="mine">Mine</string>
    <string name="more" translatable="false">\u22EE</string>
    <string name="delete">Delete</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item_name">Enter Item Name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="item_summary">Item Summary</string>
    <string name="permissions_error">You are not allowed to delete or modify tasks that don\'t belong to you.</string>
    <string name="show_all_tasks">Show all tasks</string>
    <string name="sync_message">Log in with the same account on another device or simulator to see your list sync in real-time.</string>
    <string name="account_clarification">Please log in or register with a Device Sync user account. This is separate from your Atlas Cloud login.</string>
    <string name="unable_to_switch">Switching subscriptions does not affect Realm data when Sync is offline</string>
    <string name="permissions_warning">You can only modify or remove tasks that belong to you.</string>
    <string name="user_profile_test_string" translatable="false">abcdefghijklmnopqrstuvwxyz0123456789abcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="user_profile_empty_string_replacement" translatable="false">(null)</string>
    <string name="user_profile_header">User Profile</string>
    <string name="user_profile_row_header" translatable="false">%s:</string>
    <string name="user_profile_first_name_header">First name</string>
    <string name="user_profile_last_name_header">Last name</string>
    <string name="user_profile_biography_header">Biography</string>
    <string name="user_profile_characters_remaining">%s character(s) remaining</string>
    <string name="user_profile_start_editing_message">Edit Profile</string>
    <string name="user_profile_finish_editing_message">Save Changes</string>
    <string name="user_profile_cancel_editing_message">Discard Changes</string>
    <string name="user_profile_permissions_warning">You can only modify or remove a user profile that belongs to you.</string>
    <string name="compass_screen_bearing_message">Bearing angle (in degrees): %.3f</string>
    <string name="compass_screen_distance_message_metric">Distance from match (in km): %.3f</string>
    <string name="compass_screen_distance_message_imperial">Distance from match (in mi): %.3f</string>
    <string name="compass_screen_top_bar_header">Compass data</string>
    <string name="compass_screen_awaiting_connection_message">Waiting for match to accept connection</string>
    <string name="compass_screen_canceled_connection_message">The connection was dropped</string>
    <string name="compass_screen_return_button">Return</string>
    <string name="compass_screen_cancel_button">Cancel</string>
    <string name="compass_screen_refresh_button">Refresh location data</string>
    <string name="compass_permissions_required_permissions_list">Required permissions: %s</string>
    <string name="compass_permissions_required_permissions_rationale" translatable="false">
        These permissions are necessary to make your device discoverable to others nearby and to connect with matching users
    </string>
    <string name="compass_permissions_confirm_permissions_button">Confirm</string>
    <string name="compass_permissions_dismiss_permissions_button">Dismiss</string>
    <string name="compass_permissions_screen_permissions_denied">Cannot connect with other users without required permissions</string>
    <string name="messages_screen_sent_by_me">Sent by you</string>
    <string name="messages_screen_sent_by_other">Sent by %s</string>
    <string name="messages_screen_empty_message_field">Type message here…</string>
    <string name="messages_screen_end_of_messages">You reached the end of your message history.</string>
    <string name="messages_screen_no_sent_messages">There are no messages to show.</string>
    <string name="messages_screen_update_message_contextual_menu">Edit</string>
    <string name="messages_screen_update_message_notifier">Editing message %s</string>
    <string name="messages_screen_updated_message_label">Edited</string>
    <string name="messages_screen_delete_message_contextual_menu">Delete</string>
    <string name="messages_screen_delete_message_warning_text">Are you sure you want to delete this message?</string>
    <string name="messages_screen_delete_message_confirm">Yes</string>
    <string name="messages_screen_delete_message_dismiss">No</string>
    <string name="messages_screen_reply_message_contextual_menu">Reply</string>
    <string name="messages_screen_reply_message_notifier">Replying to message %s</string>
    <string name="messages_screen_replied_message_label">Replied to %s</string>
    <string name="messages_screen_updated_and_replied_message_label">Edited; Replied to %s</string>
    <string name="messages_screen_message_reference_invalid" translatable="false">\{null\}</string>
    <string name="messages_screen_message_reference_short">\"%s\"</string>
    <string name="messages_screen_message_reference_long">\"%s…\"</string>
    <string name="messages_screen_user_blocked_notifier">You cannot view your message history with this user. Unblock them first to continue messaging.</string>
    <string name="blocking_contextual_menu_block_user">Block</string>
    <string name="blocking_contextual_menu_unblock_user">Unblock</string>
    <string name="blocking_alert_block_title">Block \"%s\"?</string>
    <string name="blocking_alert_unblock_title">Unblock \"%s\"?</string>
    <string name="blocking_alert_block_text">Are you sure you want to block this user? You will no longer see your message history with this user.</string>
    <string name="blocking_alert_unblock_text">Are you sure you want to unblock this user?</string>
    <string name="blocking_alert_cancel">Cancel</string>
    <string name="blocking_alert_confirm">Confirm</string>
    <string name="blocking_snackbar_block_text">User has been blocked</string>
    <string name="blocking_snackbar_unblock_text">User has been unblocked</string>
    <string name="censoring_enable_text_censoring">Censor</string>
    <string name="censoring_disable_text_censoring">Uncensor</string>
    <string name="new_friend_request_notification_service_content_body">You have a new friend request!</string>
    <string name="to_customize_your_preferred_language_setting_on_your_device_simply_follow_these_steps_n_n1_open_the_app_settings_for_proxipal_on_your_android_device_n_n2_scroll_down_and_tap_on_language_n_n3_choose_your_preferred_language_from_the_list">To customize your preferred language setting on your device, simply follow these steps:\n\n1. Open the App Settings for ProxiPal on your Android device.\n\n2. Scroll down and tap on \'Language\'.\n\n3. Choose your preferred language from the list.</string>
    <string name="open_settings">Open Settings</string>
    <string name="this_mobile_application_is_designed_as_a_social_networking_platform_to_connect_students_with_similar_interests_academic_backgrounds_or_geographic_proximity_to_facilitate_making_new_friends_to_ensure_user_privacy_and_data_protection_the_app_collects_only_the_information_necessary_for_basic_functionality_and_user_experience_enhancement_including_usernames_profile_pictures_interests_and_location_data_user_data_is_securely_stored_and_managed_accessible_only_to_the_user_and_not_shared_with_any_third_party_entities_the_app_may_collect_analytics_data_such_as_user_interactions_and_usage_patterns_solely_for_the_purpose_of_improving_the_app_s_performance_and_user_experience_users_have_full_control_over_their_data_and_can_delete_their_accounts_and_personal_information_at_any_time_the_app_complies_with_applicable_privacy_laws_and_standards_such_as_the_general_data_protection_regulation_gdpr_and_the_california_consumer_privacy_act_ccpa_and_periodically_updates_its_privacy_policy_in_accordance_with_any_relevant_changes_or_developments">This mobile application is designed as a social networking platform to connect students with similar interests, academic backgrounds, or geographic proximity to facilitate making new friends. To ensure user privacy and data protection, the app collects only the information necessary for basic functionality and user experience enhancement, including usernames, profile pictures, interests, and location data. User data is securely stored and managed, accessible only to the user and not shared with any third-party entities. The app may collect analytics data, such as user interactions and usage patterns, solely for the purpose of improving the app\'s performance and user experience. Users have full control over their data and can delete their accounts and personal information at any time. The app complies with applicable privacy laws and standards, such as the General Data Protection Regulation (GDPR) and the California Consumer Privacy Act (CCPA), and periodically updates its privacy policy in accordance with any relevant changes or developments.</string>
    <string name="app_settings">App Settings</string>
    <string name="general">General</string>
    <string name="profile_info">Profile Info</string>
    <string name="language">Language</string>
    <string name="features">Features</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="services">Services</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_filters">User Filters</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="welcome_message">Welcome to ProxiPal</string>
    <string name="settings">Settings</string>
    <string name="profile_photos">Profile Photos</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_limit">You can upload up to 3 photos.</string>
    <string name="bio">Bio</string>
    <string name="bio_placeholder">Hi my name is...</string>
    <string name="bio_length_indicator" translatable="false">%1$d / 100</string>
    <string name="dialog_title">Edit %1$s Link</string>
    <string name="invalid_url_error">Invalid URL. Please include http:// or https://</string>
    <string name="url_label">URL</string>
    <string name="ok_button">OK</string>
    <string name="twitter_content_description" translatable="false">Twitter</string>
    <string name="linkedin_content_description" translatable="false">LinkedIn</string>
    <string name="instagram_content_description" translatable="false">Instagram</string>
    <string name="meatball_menu_content_description">Menu</string>
    <string name="twitter" translatable="false">Twitter</string>
</resources>